load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

appliance_files = [
    "appliance/initrd",
    "appliance/kernel",
    "appliance/README.fixed",
    "appliance/root",
]

genrule(
    name = "untar_appliance",
    srcs = ["@libguestfs-appliance//file"],
    outs = appliance_files,
    cmd = "tar -C $(@D) -xvf $<",
)

pkg_tar(
    name = "appliance_layer",
    srcs = [":untar_appliance"],
    mode = "0644",
    package_dir = "/usr/local/lib/guestfs",
    visibility = ["//visibility:public"],
)

container_image(
    name = "version-container",
    base = "//:passwd-image",
    directory = "/",
    files = [
        "//:get-version",
    ],
    tars = [
        "//rpm:libguestfs-tools",
        ":appliance_layer",
    ],
)

container_image(
    name = "libguestfs-tools-image",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_ppc64le": "ppc64le",
        "//conditions:default": "amd64",
    }),
    base = ":version-container",
    directory = "/",
    entrypoint = ["/bin/bash"],
    visibility = ["//visibility:public"],
)
