load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["recorder.go"],
    importpath = "kubevirt.io/kubevirt/pkg/virt-handler/mount-manager/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ephemeral-disk-utils:go_default_library",
        "//pkg/safepath:go_default_library",
        "//pkg/unsafepath:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
    ],
)
