load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "generated_mock_recorder.go",
        "recorder.go",
    ],
    importpath = "kubevirt.io/kubevirt/pkg/virt-handler/mount-manager/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ephemeral-disk-utils:go_default_library",
        "//pkg/safepath:go_default_library",
        "//pkg/unsafepath:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
    ],
)
